# SatoriManager

./: .gitignore  CMakeLists.txt  README.md  SatoriManager.qmlproject  SatoriManager.qmlproject.qtds  SatoriManager.qrc  mobileclient.cpp  mobileclient.h  qds.cmake  qmlmodules  resource.qrc
App/: CMakeLists.txt
App/autogen/: environment.h
SatoriManager/: CMakeLists.txt  Constants.qml  qmldir
SatoriManagerContent/: ActionPresetLoader.cpp  ActionPresetLoader.h  App.qml  AppForm.ui.qml  AppForm.ui.qml.autosave.eFkcux  CMakeLists.txt  ControlStick.qml  ControlStickForm.ui.qml  Joystick.qml  JoystickForm.ui.qml  JoystickForm.ui.qmlfake85673.qmlproject.qtds  PresetActions.json  ProtocolMessages.h  ScreenControl.qml  ScreenControlForm.ui.qml  ScreenMain.qml  ScreenMainForm.ui.qml  ScreenMainForm.ui.qmlfake85673.qmlproject.qtds  Setting.qml  SettingForm.ui.qml  StyledButton.ui.qml  mobileclient.cpp  mobileclient.h
android/: AndroidManifest.xml
content/: App.qml  CMakeLists.txt  JoyStick.ui.qml  ScreenMain.ui.qml  ScreenMovement.ui.qml
imports/: CMakeLists.txt
imports/SatoriManager/: CMakeLists.txt  Constants.qml  qmldir
imports/SatoriManager/designer/: plugin.metainfo
src/: import_qml_plugins.h  main.cpp
